# livedream

./: db.sqlite3  pyproject.toml
core/: admin.py  apps.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_partners.py  0003_auto_20210703_1446.py  0004_deals_deal_image.py  0005_alter_settings_title.py
live/: settings.py  urls.py
templates/live/: index.html
